--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,13 @@ android {
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.example.stjais.carpoolkarle"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+
     }
     buildTypes {
         release {
@@ -28,15 +29,16 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-vector-drawable:26.0.0-beta1'
     implementation 'com.android.support:support-v4:26.0.0-beta1'
-    implementation 'com.google.firebase:firebase-auth:11.6.2'
-    implementation 'com.google.firebase:firebase-database:11.6.2'
-    compile 'com.google.firebase:firebase-auth:11.6.2'
-    compile 'com.google.android.gms:play-services-auth:11.6.2'
+    //noinspection GradleCompatible
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.google.firebase:firebase-auth:11.8.0'
+    compile 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.firebaseui:firebase-ui:3.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
 
 }
 apply plugin: 'com.google.gms.google-services'
